--- a/src/components/Projects/Projects.sass
+++ b/src/components/Projects/Projects.sass
@@ -20,50 +20,33 @@
             // left: 50%
             // margin-left: -135px
     &__title
-        // font-family: 'Quacker'
+        text-align: center
+        font-family: 'Quacker'
         font-weight: 400
         font-size: 75px
-    .row
-        margin-top: 30px
-        // display: flex
+        margin-bottom: 40px
     &__sizes
         display: flex
-        justify-content: space-around
-        // max-width: 1000px
+        justify-content: space-between
         margin: auto
-        // display: flex
-        // flex-direction: column
-        // flex: 0 1 20%
-        // justify-content: space-between
         flex-wrap: wrap
         &Item
             width: 15%
             transition: all 0.5s
             cursor: pointer
-            padding: 5px 20px
+            padding: 10px 5px
             margin: 10px
             display: inline-block
-            font-size: 35px
+            font-size: 30px
             font-weight: 700
             text-transform: uppercase
             position: relative
             background-image: none
             color: #000
-            &Active
-                width: 15%
-                transition: all 0.5s
-                cursor: pointer
-                padding: 5px 20px
-                margin: 10px
-                display: inline-block
-                font-size: 35px
-                font-weight: 700
-                text-transform: uppercase
-                position: relative
-                background-image: none
-                color: #000
-                background-image: linear-gradient(#242527, #404143)
-                color: #fff
+            text-align: center
+        &Item._active
+            background-image: linear-gradient(#242527, #404143)
+            color: #fff
     &__preview
         position: relative
         margin-top: 60px
